--- a/package.json
+++ b/package.json
@@ -12,11 +12,18 @@
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.5",
     "@mui/material": "^5.15.4",
     "@mui/material-nextjs": "^5.15.3",
+    "@reduxjs/toolkit": "^2.0.1",
+    "axios": "^1.6.5",
+    "formik": "^2.4.5",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-redux": "^9.1.0",
+    "react-toastify": "^10.0.3",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@types/node": "^20",
